@@ -27,6 +27,10 @@
       <source tarname="libunistring-%-mingw32-%-src.tar.%" />
 
       <component class="dll">
+        <release tarname="libunistring-0.9.6-1-mingw32-dll-2.tar.lzma" >
+          <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
+          <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
+        </release>
         <release tarname="libunistring-0.9.3-1-mingw32-dll-0.tar.lzma" >
           <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
           <requires eq="mingw32-libiconv-*-mingw32-*-dll-2.tar" />
@@ -34,14 +38,19 @@
       </component>
 
       <component class="doc">
+        <release tarname="libunistring-0.9.6-1-mingw32-doc.tar.lzma" />
         <release tarname="libunistring-0.9.3-1-mingw32-doc.tar.lzma" />
       </component>
 
       <component class="lic">
+        <release tarname="libunistring-0.9.6-1-mingw32-lic.tar.lzma" />
         <release tarname="libunistring-0.9.3-1-mingw32-lic.tar.lzma" />
       </component>
 
       <component class="dev">
+        <release tarname="libunistring-0.9.6-1-mingw32-dev.tar.lzma" >
+          <requires eq="mingw32-libunistring-%-mingw32-%-dll-2.tar" />
+        </release>
         <release tarname="libunistring-0.9.3-1-mingw32-dev.tar.lzma" >
           <requires eq="mingw32-libunistring-%-mingw32-%-dll-0.tar" />
         </release>
